[gd_scene load_steps=4 format=2]

[ext_resource path="res://fish/BaseClasses/FishTemplate.gd" type="Script" id=1]
[ext_resource path="res://bg/watertile.aseprite" type="SpriteFrames" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Fish" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="CatchTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Rotater" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="CatchTimer" to="." method="_on_CatchTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
